--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ input {
     padding: 0.5rem;
     font-size: 1rem;
     margin-bottom: 1rem;
+    box-sizing: border-box;
 }
 
 #qr-code-wrapper {
